# CoderOfSnake_Data

./: .env  .gitignore  Readme.md  gitignore.txt  main.py  pyproject.toml
alembic/: env.py
conf/: message.py
plate_operation/: discavery_plate_2.py  finish_car_plate_code_building.py  insctruction.txt  open_photo_1.py  plate_enlargement_3.py
reports_uploads/: all_users_for_admin_2024-06-10_18-55-08.csv  all_users_for_admin_2024-06-10_21-30-54.csv  all_users_for_admin_2024-06-15_12-56-07.csv  all_users_for_admin_2024-06-15_13-39-29.csv  all_users_for_admin_2024-06-15_13-44-37.csv  all_users_for_admin_2024-06-15_16-50-54.csv  all_users_for_admin_2024-06-15_17-55-14.csv  all_users_for_admin_2024-06-15_18-47-01.csv  all_users_for_admin_2024-06-16_08-58-53.csv  all_users_for_admin_2024-06-16_11-43-46.csv  all_users_for_admin_2024-06-17_17-07-27.csv  all_users_for_admin_2024-06-17_17-11-52.csv  all_users_for_admin_2024-06-18_13-31-23.csv  all_users_for_admin_2024-06-18_18-25-07.csv  all_users_for_admin_2024-06-18_18-37-42.csv  all_users_for_admin_2024-06-18_19-46-22.csv  all_users_for_admin_2024-06-18_19-57-58.csv  all_users_for_admin_2024-06-18_20-50-45.csv  all_users_for_admin_2024-06-18_20-55-24.csv  all_users_for_admin_2024-06-18_23-00-49.csv  all_users_for_admin_2024-06-18_23-03-34.csv  all_users_for_admin_2024-06-18_23-49-10.csv  all_users_for_admin_2024-06-19_05-52-01.csv  all_users_for_admin_2024-06-19_06-28-04.csv  all_users_for_admin_2024-06-19_06-50-56.csv  users_for_admin_2024-06-10_18-55-29.csv  users_for_admin_2024-06-15_12-45-42.csv  (+8 more)
scripts/: home.js  (+6 more)
(+59 files in other folders)
