[tool.poetry]
name = "pds-1"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.7.2"}
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
